[Mac] Ensure bookmark items are highlighted when invoking a context menu

Context menus run in a modal loop, so Control-clicking a bookmark item
while a contextual menu is already visible prevents animating the
item's highlight. The result was an unhighlighted bookmark item
displaying a contextual menu. This cl forces an immediate highlight of
the item so that no animation is involved.

This cl also moves code from rightMouseClicked: to the NSView methods
that are called right before and after a contextual menu appears. The
original idea of overridding rightMouseClicked: was to ensure correct
hightlighting before and after the contextual menu, but this method
is not called when you Control-click an item, only when you right
click using a mouse with a physical right mouse button.

R=avi@chromium.org
BUG=649256

Review-Url: https://codereview.chromium.org/2418893004
Cr-Commit-Position: refs/heads/master@{#425499}

Former-commit-id: f581fedebe6bc34efcaf24d2d9f45120e98e3134